# wte2

./: .gitignore  README.md  project.md  pyproject.toml
docs/: architecture.md  phase-roadmap.md
scada_trend_viewer/: README.md  server.py
scada_trend_viewer/static/: app.js  index.html  styles.css
src/wte_trend_viewer/: __init__.py  __main__.py  app.py  bootstrap.py  data_manager.py  main_window.py  plot_canvas.py  tag_tree_model.py
src/wte_trend_viewer/application/services/: __init__.py  inspection_service.py  trend_service.py  workbook_service.py
src/wte_trend_viewer/config/: settings.py
src/wte_trend_viewer/domain/: __init__.py  models.py  protocols.py
src/wte_trend_viewer/infrastructure/: __init__.py
src/wte_trend_viewer/infrastructure/data_sources/: __init__.py  excel_calamine_source.py
src/wte_trend_viewer/infrastructure/processing/: __init__.py  downsampler.py
src/wte_trend_viewer/infrastructure/threading/: __init__.py  workbook_loader.py
src/wte_trend_viewer/ui/: main_window.py
src/wte_trend_viewer/ui/docks/: analytics_dock.py  tag_browser_dock.py
src/wte_trend_viewer/ui/models/: tag_tree_model.py
src/wte_trend_viewer/ui/plot/: __init__.py  trend_canvas.py
src/wte_trend_viewer/ui/styles/: __init__.py  isa101.py
tests/smoke/: test_package_import.py
