[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wte-trend-viewer"
version = "0.1.0"
description = "Modern SCADA trend viewer prototype guided by the project blueprint."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8,<7",
]

[project.scripts]
wte-trend-viewer = "wte_trend_viewer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

