[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wte-trend-viewer"
version = "0.1.0"
description = "SCADA trend viewer scaffold structured around the PDF implementation phases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8,<7",
    "numpy>=2,<3",
    "polars[calamine,numpy]>=1.38,<2",
    "pyqtgraph>=0.14,<1",
    "tsdownsample>=0.1.4.1,<0.2 ; python_version < '3.14'",
    "tsdownsample @ git+https://github.com/predict-idlab/tsdownsample.git@cdb709468a5979eda7a7a1d702ababd89cebc78a ; python_version >= '3.14'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.12,<0.13",
]

[project.scripts]
wte-trend-viewer = "wte_trend_viewer.bootstrap:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
